[gd_scene load_steps=4 format=3 uid="uid://c6aastqpgo2mj"]

[ext_resource type="Script" path="res://Wrongs/wrongs.gd" id="1_of2sm"]
[ext_resource type="PackedScene" uid="uid://jabpahpylwer" path="res://Wrongs/wrong.tscn" id="1_quywf"]
[ext_resource type="AudioStream" uid="uid://b3tam3ltb5ocx" path="res://Assets/Sounds/Buzzer.mp3" id="3_7m7ua"]

[node name="Wrongs" type="Control" node_paths=PackedStringArray("wrongs")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_of2sm")
wrongs = [NodePath("HBoxContainer/Wrong1"), NodePath("HBoxContainer/Wrong2"), NodePath("HBoxContainer/Wrong3")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Wrong1" parent="HBoxContainer" instance=ExtResource("1_quywf")]
visible = false
layout_mode = 2

[node name="Wrong2" parent="HBoxContainer" instance=ExtResource("1_quywf")]
visible = false
layout_mode = 2

[node name="Wrong3" parent="HBoxContainer" instance=ExtResource("1_quywf")]
visible = false
layout_mode = 2

[node name="Buzzer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_7m7ua")
